<resources>
    <string name="app_name">ToDo</string>
    <string name="action_settings">Settings</string>
    <string name="mark_as_complete">Add Task</string>
    <string name="btn_label_cancel">Cancel</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_description">Enter Description</string>
    <string name="delete_task">Delete</string>
    <string name="choose_date_and_time">Choose Date and Time</string>
    <string name="enter_title">Enter Title</string>
    <string name="label_dialog_title">Add new task</string>
    <string name="label_btn_add_task">ADD TASK</string>
    <string name="label_edit_task">Edit your task</string>
    <string name="label_btn_save">SAVE CHANGES</string>
    <string name="enter_tag_name">Enter Tag Name</string>
    <string name="get_started">Get Started</string>
    <string name="reminders_made_easy">Reminders Made Easy</string>
    <string name="todays_reminders">Todays Reminders</string>
    <string name="tasks">Tasks</string>
    <string name="high_priority">High</string>
    <string name="medium_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="priority">Priority:</string>
    <string name="date_time">Date-Time</string>
    <string name="label_tags">Tags:</string>
    <string name="add_tag">ADD TAG</string>
    <string name="pick_colour">Pick Colour</string>
    <string name="click_here">Click Here</string>
    <string name="label_priority">Priority</string>
    <string name="tags">Tags</string>
    <string name="manage_tags">Manage Tags</string>
    <string name="sort_list">Sort List</string>
    <string name="sort_by_date">Sort By Date</string>
    <string name="sort_by_priority">Sort By Priority</string>
    <string name="sort_by_tags">Sort By Tags</string>
    <string name="edit">EDIT</string>
    <string name="title_activity_login">login</string>
    <string name="label_logout">Logout</string>
    <string name="main_web_client_id">417907795972-nihg9vfpjl25lml5j1ln97u4turdciu6.apps.googleusercontent.com</string>
    <string name="personalize_your_todo_list">Personalize your ToDo list</string>
    <string name="welcome">Welcome!!</string>
</resources>
