<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/tv_title"
            android:textStyle="bold"
            android:textColor="@color/colorblack"
            android:fontFamily="@font/raleway"
            android:gravity="center"
            android:layout_margin="@dimen/dimen_10dp"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="#33000000"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_8dp"
                android:paddingRight="@dimen/dimen_8dp"
                android:hint="@string/enter_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_8dp"
                android:paddingRight="@dimen/dimen_8dp"
                android:hint="@string/enter_description" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tags_edit_recyclerview"
            android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:textStyle="bold"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_tag"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"/>

        <RelativeLayout
            android:id="@+id/view_dnt_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp">

            <TextView
                android:id="@+id/tv_dnt_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/choose_date_and_time"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_dnt_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_dnt_label"
                android:layout_marginLeft="4dp"
                android:drawableEnd="@drawable/ic_arrow_down_black_24dp"
                android:drawablePadding="@dimen/dimen_8dp"
                android:text="@string/click_here" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_priority"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:textStyle="bold"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:id="@+id/rg_priority">

            <RadioButton
                android:id="@+id/rb_high_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_priority"/>
            <RadioButton
                android:id="@+id/rb_medium_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_priority"/>
            <RadioButton
                android:id="@+id/rb_low_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_priority"/>
        </RadioGroup>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_marginLeft="4dp"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp">


            <Button
                android:id="@+id/dialog_btn_add"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btncancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dialog_btn_add"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:text="@string/btn_label_cancel"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

    </LinearLayout>


</ScrollView>


