<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_fragment_shape">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:paddingTop="@dimen/dimen_8dp"
        android:paddingBottom="4dp"
        android:textColor="@color/colorblack"
        android:id="@+id/tv_title"
        android:textStyle="bold"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:layout_margin="@dimen/dimen_10dp"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingBottom="4dp"
        android:background="#33000000"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:layout_margin="@dimen/dimen_10dp"
        android:fontFamily="@font/raleway"
        android:textStyle="italic"
        android:text="Description"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_priority"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="@dimen/dimen_10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/priority"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_priority"
            android:textSize="14sp"
            android:fontFamily="@font/raleway"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_toRightOf="@+id/label_priority"/>


    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_tags"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:layout_margin="@dimen/dimen_10dp"
        android:fontFamily="@font/raleway"
        android:text="@string/label_tags"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tags_display_recyclerview"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:layout_height="wrap_content"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_datetime"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="@dimen/dimen_10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/date_time"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_datentime"
            android:textSize="16sp"
            android:fontFamily="@font/raleway"
            android:layout_margin="@dimen/dimen_10dp"
            android:layout_toRightOf="@+id/label_datetime"
            android:layout_marginLeft="@dimen/dimen_8dp"/>


    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="#33000000"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/tags_recycler_view"
        android:padding="@dimen/dimen_8dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_dialog_display_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/btn_label_cancel"
            android:layout_alignParentEnd="true"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_dialog_display_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:background="?android:attr/selectableItemBackground"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_toLeftOf="@id/btn_dialog_display_cancel"
            android:text="@string/edit"/>


        <Button
            android:id="@+id/btndeletetask"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:layout_alignTop="@+id/btn_dialog_display_cancel"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:text="@string/delete_task"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>