<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_8dp"
        android:paddingRight="@dimen/dimen_8dp"
        android:paddingTop="@dimen/dimen_8dp"
        android:paddingBottom="16dp"
        android:id="@+id/tv_tag_title"
        android:textStyle="bold"
        android:textColor="@color/colorblack"
        android:text="@string/tags"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:layout_margin="@dimen/dimen_10dp"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingBottom="4dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/line1"
        android:layout_alignBottom="@+id/tv_tag_title"
        android:background="#33000000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:id="@+id/linearlayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tags_recycler_view"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/dimen_8dp"
            android:paddingRight="@dimen/dimen_8dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_below="@+id/linearlayout"
        android:padding="@dimen/dimen_8dp"
        android:layout_height="wrap_content">
        
        <Button
            android:id="@+id/btn_tag_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_alignParentEnd="true"
            android:text="@string/add_tag"/>

        <Button
            android:id="@+id/btn_tag_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/btn_label_cancel"
            android:layout_toLeftOf="@id/btn_tag_add"/>

    </RelativeLayout>

</RelativeLayout>